--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^4.0.0",
+    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -14,11 +15,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm sass:build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build && cp CNAME ./build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build && cp CNAME ./build",
+    "deploy": "gh-pages -d build",
+    "sass": "sass --watch src/styles/scss:src/styles/css",
+    "sass:build": "sass --update src/styles/scss:src/styles/css"
   },
   "eslintConfig": {
     "extends": [
